--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gradeinquiry">
+    package="com.example.gradeinquiry" >
+    <!-- 设置蓝牙相关权限 -->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="客户端"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GradeInquiry">
+        android:theme="@style/Theme.GradeInquiry" >
+        <activity
+            android:name=".User.GradesKnowing"
+            android:launchMode="singleTask"
+            android:exported="false" />
         <activity
             android:name=".User.RegisterActivity"
+            android:launchMode="singleTask"
             android:exported="false" />
         <activity
             android:name=".User.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".User.MainActivity"
-            android:exported="true">
+            android:launchMode="singleTask"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".User.MainActivity"
+            android:launchMode="singleTask"
+            android:exported="true" />
     </application>
 
 </manifest>
